fix overflowing text

--- a/styles.css
+++ b/styles.css
@@ -45,13 +45,23 @@ html {
     grid-column: 2 / 3;
     display: grid;
     gap: 1rem;
-    height: 150px;
-    grid-template-columns: repeat(auto-fit, 200px);
+    height: 250px;
+    grid-template-columns: repeat(auto-fit, 250px);
 }
 
 .bookCard {
     display: flex;
+    flex-direction: column;
     padding: 20px;
     background-color: antiquewhite;
     border-radius: 18px;
+}
+
+.bookCard lable {
+    margin-top: auto;
+}
+
+p {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
